--- a/luffycityweb/package.json
+++ b/luffycityweb/package.json
@@ -13,7 +13,9 @@
     "element-plus": "^2.3.12",
     "unplugin-vue-components": "^0.25.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
